--- a/install
+++ b/install
@@ -32,3 +32,4 @@ dnf update -y
 dnf install kusanagi -y
 kusanagi setup PLATFORM
 kusanagi init --nophrase --passwd $PW --dbrootpass $PW --tz Asia/Ho_Chi_Minh --lang en --keyboard en --php82 --nginx125 --mariadb10.5
+ln -s /opt/kusanagi/sbin/nginx /sbin/nginx
