--- a/install
+++ b/install
@@ -37,3 +37,4 @@ kusanagi monit off
 printf "\n y\n n\n y\n y\n y\n y\n" | mysql_secure_installation
 sed -i "s|#bind-address=0.0.0.0|bind-address=127.0.0.1|g" /etc/my.cnf.d/server.cnf
 systemctl restart mariadb
+systemctl disable --now postfixz
