--- a/install
+++ b/install
@@ -28,6 +28,7 @@ gpgkey=file:///etc/pki/rpm-gpg/RPM-GPG-KEY-prime-strategy
 EOT
 
 #Update OS and install Kusanagi
+rpm --import https://repo.almalinux.org/almalinux/RPM-GPG-KEY-AlmaLinux
 dnf update -y
 dnf install kusanagi -y
 kusanagi setup PLATFORM
