--- a/install
+++ b/install
@@ -42,4 +42,21 @@ systemctl disable --now postfix
 dnf install htop php82-php-gmp -y
 ln -s /opt/remi/php82/root/usr/lib64/php/modules/gmp.so `php -ini | awk '/extension_dir/{print $NF; exit}'`/gmp.so
 sed -i -e 's/;extension=gmp/extension=gmp/' -e 's/^date.timezone = UTC/date.timezone = Asia\/Ho_Chi_Minh/' /etc/opt/kusanagi/php.d/php.ini
+
+cat << EOT > /etc/cron.monthly/cloudflare-ips
+#!/bin/bash
+{
+curl -s https://www.cloudflare.com/ips-v4 | sed "s|^|set_real_ip_from |g; s|\\$|;|g"
+echo
+curl -s https://www.cloudflare.com/ips-v6 | sed "s|^|set_real_ip_from |g; s|\\$|;|g"
+echo
+echo "real_ip_header X-Forwarded-For;"
+} > /etc/opt/kusanagi/nginx/conf.d/cloudflare.conf
+nginx -t
+if [ $? -eq 0 ]; then
+        systemctl reload nginx
+fi
+EOT
+chmod +x /etc/cron.monthly/cloudflare-ips
+/etc/cron.monthly/cloudflare-ips
 kusanagi restart
