--- a/install
+++ b/install
@@ -113,7 +113,10 @@ curl -s https://www.cloudflare.com/ips-v6 | sed "s|^|set_real_ip_from |g; s|\\$|
 echo
 echo "real_ip_header X-Forwarded-For;"
 } > /etc/opt/kusanagi/nginx/conf.d/cloudflare.conf
-nginx -t && systemctl reload nginx
+nginx -t
+if [ $? -eq 0 ]; then
+	systemctl reload nginx
+fi
 EOT
 chmod +x /etc/cron.monthly/cloudflare-ips
 /etc/cron.monthly/cloudflare-ips
